<resources>
    <string name="app_name">Foosball</string>
    <string name="options">Options</string>
    <string name="play">Play</string>
    <string name="rankings">Rankings</string>
    <string name="matches">Matches</string>
    <string name="add_new_player">Add new player</string>
    <string name="select_player1">Select player 1</string>
    <string name="select_player2">Select player 2</string>
    <string name="start_match">Start match</string>
    <string name="add_player">Add player</string>
    <string name="player_name">Player name: </string>
    <string name="p1">Player 1</string>
    <string name="p2">Player 2</string>
    <string name="score">Score</string>
    <string name="two">2</string>
    <string name="four">4</string>
    <string name="plus">+</string>
</resources>