<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <TextView
        android:id="@+id/txtOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/btnMatches"
        app:layout_constraintTop_toBottomOf="@id/txtOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnMatches"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/matches"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/btnRankings"
        app:layout_constraintTop_toBottomOf="@id/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnRankings"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/rankings"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMatches"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>